--- a/themes/national/less/national.less
+++ b/themes/national/less/national.less
@@ -327,24 +327,30 @@ form.navbar-form {
     }
 }
 
-// available online links
-.template-dir-record .recordURLs a, .template-dir-record .available-online-links div:not(.more-options) > a { 
-    display: inline-block;
-    line-height: 1.5em;
-    background: @link-color;
-    margin-bottom: 2px;
-    margin-top: 2px;
-    margin-right: 3px;
-    padding: 3px 8px 3px 20px;
-    word-break: break-all;
-    color: #fff;
-    border-radius: 10px;
-    & i {
-        font-size: 1em;
-        margin-left: -14px;
-        transition: transform .2s ease-in-out;
-    }
-    &:hover i {
-        transform: translateX(-2px);
+// available online links in Record view
+.template-dir-record {
+    & .recordURLs {
+        & a { 
+            display: inline-block;
+            line-height: 1.5em;
+            margin-bottom: 2px;
+            margin-top: 2px;
+            margin-right: 3px;
+            margin-left: 1px;
+            padding: 2px 8px 2px 20px;
+            word-break: break-all;
+            border-style: solid;
+            border-radius: 10px;
+            border-width: 1px;
+            & i {
+                font-size: 1em;
+                margin-left: -14px;
+                transition: transform .2s ease-in-out;
+            }
+        }
+        // remove 1px padding used without border to avoid truncate cutoff
+        & .truncate-field.truncate-done, & .resolver {
+            padding-left: 0;
+        }
     }
 }
